# dragon-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
cogs/: ai.py  channels.py  fun.py  help.py  miscellaneous.py  ping.py  xkcd.py
cogs/moderation/: __init__.py  _utils.py  cog.py  constants.py  time.py
